<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.coronamap.www.ui.fragments.MapFragment"
        android:label="@string/label_fragment_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_mapDetailFragment"
            app:destination="@id/mapDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/dashBoardFragment"
        android:name="com.coronamap.www.ui.fragments.DashBoardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dash_board" />
    <fragment
        android:id="@+id/mapDetailFragment"
        android:name="com.coronamap.www.ui.fragments.MapDetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_map_detail">
        <argument
            android:name="locationItem"
            app:argType="com.coronamap.www.model.LocationItem" />
    </fragment>
</navigation>